# SlyYTDAPI-Python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.md  ref.rst
docs/tutorial/: getting_started.md
src/SlyYTDAPI/: __init__.py  __main__.py  livechat.py  members.py  ytdapi.py
test/: channels.py  members.py  playlists.py  readme_example.py  search.py  test_channels.py  test_members.py  test_playlists.py  test_readme.py  test_search.py  test_yt_readme.py
