[metadata]
name = SlyYTDAPI
version = 0.0.2
author = Dunkyl 🔣🔣
# author_email = 
description = No-boilerplate, async YouTube Data API access.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dunkyl/SlyPyYTDAPI
project_urls =
    Bug Tracker = https://github.com/dunkyl/SlyPyYTDAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src